--- a/Views/TicketAttachments/Edit.cshtml
+++ b/Views/TicketAttachments/Edit.cshtml
@@ -10,41 +10,36 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Edit" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
+            <label class="btn btn-outline-secondary btn-sm">
+                Upload File
+                <input asp-for="@Model.FormFile" type="file" required />
+            </label>
+
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
                 <input asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
+
+            <input type="hidden" asp-for="Created" class="form-control" />
+
+
+            <input type="hidden" asp-for="FileName" class="form-control" />
+
+
+            <input type="hidden" asp-for="FileData" class="form-control" />
+            <input type="hidden" asp-for="ContentType" class="form-control" />
+
+            <select type="hidden" asp-for="TicketId" class="form-control" asp-items="ViewBag.TicketId"></select>
+
+
+            <select type="hidden" asp-for="CustomUserId" class="form-control" asp-items="ViewBag.CustomUserId"></select>
+
             <div class="form-group">
-                <label asp-for="Created" class="control-label"></label>
-                <input asp-for="Created" class="form-control" />
-                <span asp-validation-for="Created" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="FileName" class="control-label"></label>
-                <input asp-for="FileName" class="form-control" />
-                <span asp-validation-for="FileName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="FileData" class="control-label"></label>
-                <input asp-for="FileData" class="form-control" />
-                <span asp-validation-for="FileData" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="TicketId" class="control-label"></label>
-                <select asp-for="TicketId" class="form-control" asp-items="ViewBag.TicketId"></select>
-                <span asp-validation-for="TicketId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CustomUserId" class="control-label"></label>
-                <select asp-for="CustomUserId" class="form-control" asp-items="ViewBag.CustomUserId"></select>
-                <span asp-validation-for="CustomUserId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <button type="submit" class="btn btn-outline-secondary md-btn-flat">Upload</button>
             </div>
         </form>
     </div>
