update submitter button glitch

--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -223,7 +223,7 @@
                     </div>
                     <div class="row">
                         <div class="col text-center">
-                            <button type="submit" name="demoEmail" value="DemoSubEmail" class="btn btn-primary"><span class="iconify" data-icon="clarity:login-solid" data-inline="true"></span> Login as Demo Submitter</button>
+                            <button type="submit" name="demoEmail" value="DemoSubEmail" class="btn btn-secondary"><span class="iconify" data-icon="clarity:login-solid" data-inline="true"></span> Login as Demo Submitter</button>
                         </div>
                     </div>
                 </div>
