update register new user to role and the notes on demo user on login page

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -526,6 +526,11 @@
 
                                         </div>
                                     </div>
+                                    <div class="row pb-3">
+                                        <div class="col">
+                                            Notes: If you log in as a Demo User, You can't create of update anything on the database. If you want to see it fully functions, contact me by clicking on the "How to contact me ?" button
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="modal-footer">
 
@@ -561,6 +566,11 @@
                                         <div class="col">
                                             This is my biggest project and I put a lot of works on this project. After finished this Bug Tracker, I used it to track other project, and I'm still working on those projects right now. You can see it when you log in with Demo Admin or Demo Project Manager
 
+                                        </div>
+                                    </div>
+                                    <div class="row pb-3">
+                                        <div class="col">
+                                            Notes: If you log in as a Demo User, You can't create of update anything on the database. If you want to see it fully functions, contact me by clicking on the "How to contact me ?" button
                                         </div>
                                     </div>
                                 </div>
