--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -528,7 +528,7 @@
                                     </div>
                                     <div class="row pb-3">
                                         <div class="col">
-                                            Notes: If you log in as a Demo User, You can't create of update anything on the database. If you want to see it fully functions, contact me by clicking on the "How to contact me ?" button
+                                            Notes: If you log in as a Demo User, You can't create or update anything on the database. If you want to see it fully functions, contact me by clicking on the "How to contact me ?" button
                                         </div>
                                     </div>
                                 </div>
@@ -570,7 +570,7 @@
                                     </div>
                                     <div class="row pb-3">
                                         <div class="col">
-                                            Notes: If you log in as a Demo User, You can't create of update anything on the database. If you want to see it fully functions, contact me by clicking on the "How to contact me ?" button
+                                            Notes: If you log in as a Demo User, You can't create or update anything on the database. If you want to see it fully functions, contact me by clicking on the "How to contact me ?" button
                                         </div>
                                     </div>
                                 </div>
