update typo and fix appearance

--- a/Views/Projects/DemoUser.cshtml
+++ b/Views/Projects/DemoUser.cshtml
@@ -14,7 +14,8 @@
             <div class="card-body">
                 <p>You are seeing this page because your role is a demo user, you can't create or doing anything effect the database of my system.</p>
                 <p> My Bug Tracker has Authorization, Authendication, Securities, Create, Adjust Project and Ticket, Assign role to user, Assign ticket to user, Change Ticket's Priority, Status, or Type, Comment on Ticket, Attach file to Ticket and Project, Notification Alert through Email, Message system, and Overview the work of company.</p>
-                <p>If you want to see it fully functions, set me up an appointment through the contact page on the top navication bar, or through my <a href="https://duylanle-portfolio.netlify.app/" target="_blank">Portfolio website</a>.</p>
+                <p>If you want to see it fully functions, set me up an appointment through the contact page on the top navigation bar, or through my <a href="https://duylanle-portfolio.netlify.app/" target="_blank">Portfolio website</a>.</p>
+                <hr />
                 <div class="row">
                     <div class="col text-right">
                         <a class="btn btn-primary" href="https://duylanle-portfolio.netlify.app/" target="_blank"><span class="iconify" data-icon="dashicons:open-folder" data-inline="true"></span> My Portfolio</a>
