--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -438,7 +438,7 @@
         else
         {
             <div>                                
-                <audio id="myaudio" autoplay loop>
+                <audio id="myaudio" loop>
                     <source src="~/audio/night_sound_edited.mp3" type="audio/mp3">
                     Your browser does not support the audio element.
                 </audio>
