--- a/Areas/Identity/Pages/Account/AccessDenied.cshtml
+++ b/Areas/Identity/Pages/Account/AccessDenied.cshtml
@@ -8,7 +8,6 @@
 <br />
 <br />
 <br />
-<br />
 <div class="row">
     <div class="col-2"></div>
     <div class="col">
@@ -17,6 +16,7 @@
                 <h1 class="text-danger">@ViewData["Title"]</h1>
             </div>
             <div class="card-body text-center">
+                <img style="width:50%" src="~/img/access_denied.jpg" class="img-fluid" />
                 <p class="text-danger">You do not have the permission to access this resource. Please contact your Project Manager or Admin to have the information you need.</p>
                 <a class="btn btn-secondary" asp-controller="Home" asp-action="Index"><i class="fas fa-chevron-circle-left"></i> Back to Dashboard</a>
             </div>
