--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -268,6 +268,89 @@
         }
         else
         {
+            <div class="col-sm">
+                <div class="card">
+                    <div class="card-header bg-dark">
+                        <h5 class="card-title">Quick Management Action</h5>
+                    </div>
+                    <div class="card-body" style="padding-right:10px">
+                        @*<a asp-controller="Tickets" asp-action="Create" class="btn btn-secondary pb-2 mb-2"><i class="fas fa-plus-circle"></i> Create New Ticket</a>*@
+                        <button type="button" class="btn btn-secondary pb-2 mb-2" data-toggle="modal" data-target="#exampleModal1">
+                            <i class="fas fa-plus-square"></i> Create New Ticket
+                        </button>
+
+                        <!-- Modal -->
+                        <div class="modal fade" id="exampleModal1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel1" aria-hidden="true">
+                            <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalLabel1">Create New Ticket</h5>
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </div>
+                                    <form asp-controller="Tickets" asp-action="Create" method="post">
+                                        <div class="modal-body">
+
+
+                                            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                                            <div class="form-group">
+                                                <label class="control-label">Name</label>
+                                                <input name="Name" class="form-control" />
+
+                                            </div>
+                                            <div class="form-group">
+                                                <label class="control-label">Description</label>
+                                                <input name="Description" class="form-control" />
+
+                                            </div>
+                                            <div class="form-group">
+                                                <label name="projectId" class="control-label">Projects</label>
+                                                <select name="projectId" class="form-control" asp-items="ViewBag.ProjectId"></select>
+                                            </div>
+                                            @if (!(await UserManager.IsInRoleAsync(await UserManager.GetUserAsync(User), Roles.Developer.ToString())))
+                                            {
+                                                <div class="form-group form-check">
+                                                    <label class="form-check-label">
+                                                        <input class="form-check-input" name="IsAssigned" type="checkbox" value="true" /> Assigned?
+                                                    </label>
+                                                </div>
+
+                                                <div class="form-group">
+                                                    <label name="DeveloperId" class="control-label">Developer</label>
+                                                    <select name="DeveloperId" class="form-control" asp-items="@ViewBag.DeveloperId"></select>
+                                                </div>
+                                            }
+
+
+                                            <div class="form-group">
+                                                <label name="StatusId" class="control-label">Status</label>
+                                                <select name="StatusId" class="form-control" asp-items="ViewBag.StatusId"></select>
+                                            </div>
+                                            <div class="form-group">
+                                                <label name="PriorityId" class="control-label">Priority</label>
+                                                <select name="PriorityId" class="form-control" asp-items="ViewBag.PriorityId"></select>
+                                            </div>
+                                            <div class="form-group">
+                                                <label name="TicketTypeId" class="control-label">TicketType</label>
+                                                <select name="TicketTypeId" class="form-control" asp-items="ViewBag.TicketTypeId"></select>
+                                            </div>
+
+                                        </div>
+                                        <div class="modal-footer">
+
+                                            <button type="submit" class="btn btn-primary">Create</button>
+                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                        @*<a asp-controller="Projects" asp-action="Create" class="btn btn-secondary pb-2 mb-2"> <i class="fas fa-tasks"></i> Create New Projects</a>*@
+                        <a asp-controller="Tickets" asp-action="Index" class="btn btn-secondary pb-2 mb-2"><i class="nav-icon fas fa-ticket-alt"></i> View All Tickets</a>
+                    </div>
+                </div>
+            </div>
             <div class="col">
                 <div class="card">
                     <div class="card-header bg-dark">
